// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`responseUtils addCache it should set the selection to end of user content if the removed email extras were selected 1`] = `
{
  "action": {
    "args": Immutable.Map {
      "body_html": "<div><strong>Hello, check this out</strong></div><div><br></div><figure style="display:inline-block;margin:0"><img src="https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/image-e99e1a8a-990b-4df1-876d-cd1ced6df667.png" width="400px" style="max-width: 100%"></figure><br><div><em>should be good now</em></div>",
      "body_text": "Hello, check this out

 

should be good now",
    },
    "currentUser": Immutable.Map {},
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {},
    "ticketId": "0",
  },
  "cacheAdded": true,
  "contentState": "<div>Foo bar baz</div>",
  "emailExtraAdded": false,
  "forceFocus": true,
  "forceUpdate": true,
  "inserted_discounts": Immutable.List [],
  "selectionState": {
    "anchorBlockText": "Foo bar baz",
    "anchorOffset": 11,
    "focusBlockText": "Foo bar baz",
    "focusOffset": 11,
    "hasFocus": false,
    "isBackward": false,
  },
  "state": Immutable.Map {
    "state": Immutable.Map {
      "selectionState": null,
      "inserted_discounts": Immutable.List [],
      "emailExtraAdded": false,
      "forceFocus": false,
      "appliedMacro": null,
      "isTranslationPending": false,
      "dirty": false,
      "forceUpdate": false,
      "firstNewMessage": true,
      "contentState": "<div><br></div>",
      "cacheAdded": true,
    },
    "_internal": Immutable.Map {
      "loading": Immutable.Map {
        "addAttachment": false,
        "submitMessage": false,
      },
    },
    "newMessage": Immutable.Map {
      "channel": "email",
      "mention_ids": Immutable.List [],
      "macros": Immutable.List [],
      "body_html": "",
      "public": true,
      "body_text": "",
      "subject": "",
      "via": "helpdesk",
      "from_agent": true,
      "attachments": Immutable.List [],
      "sender": null,
      "source": Immutable.Map {
        "type": "email",
        "from": Immutable.Map {},
        "to": Immutable.List [],
        "cc": Immutable.List [],
        "bcc": Immutable.List [],
        "extra": Immutable.Map {
          "include_thread": false,
        },
      },
    },
  },
}
`;

exports[`responseUtils addCache should not restore the message if action is from macro 1`] = `
{
  "action": {
    "args": Immutable.Map {
      "body_html": "<div><strong>Hello, check this out</strong></div><div><br></div><figure style="display:inline-block;margin:0"><img src="https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/image-e99e1a8a-990b-4df1-876d-cd1ced6df667.png" width="400px" style="max-width: 100%"></figure><br><div><em>should be good now</em></div>",
      "body_text": "Hello, check this out

 

should be good now",
    },
    "currentUser": Immutable.Map {},
    "fromMacro": true,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {},
    "ticketId": "0",
  },
  "cacheAdded": true,
  "contentState": "<div><br></div>",
  "forceFocus": false,
  "forceUpdate": false,
  "state": Immutable.Map {
    "state": Immutable.Map {
      "selectionState": null,
      "inserted_discounts": Immutable.List [],
      "emailExtraAdded": false,
      "forceFocus": false,
      "appliedMacro": null,
      "isTranslationPending": false,
      "dirty": false,
      "forceUpdate": false,
      "firstNewMessage": true,
      "contentState": "<div><br></div>",
      "cacheAdded": true,
    },
    "_internal": Immutable.Map {
      "loading": Immutable.Map {
        "addAttachment": false,
        "submitMessage": false,
      },
    },
    "newMessage": Immutable.Map {
      "channel": "email",
      "mention_ids": Immutable.List [],
      "macros": Immutable.List [],
      "body_html": "",
      "public": true,
      "body_text": "",
      "subject": "",
      "via": "helpdesk",
      "from_agent": true,
      "attachments": Immutable.List [],
      "sender": null,
      "source": Immutable.Map {
        "type": "email",
        "from": Immutable.Map {},
        "to": Immutable.List [],
        "cc": Immutable.List [],
        "bcc": Immutable.List [],
        "extra": Immutable.Map {
          "include_thread": false,
        },
      },
    },
  },
}
`;

exports[`responseUtils addCache should remove the email extras from the restored message 1`] = `
{
  "action": {
    "args": Immutable.Map {
      "body_html": "<div><strong>Hello, check this out</strong></div><div><br></div><figure style="display:inline-block;margin:0"><img src="https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/image-e99e1a8a-990b-4df1-876d-cd1ced6df667.png" width="400px" style="max-width: 100%"></figure><br><div><em>should be good now</em></div>",
      "body_text": "Hello, check this out

 

should be good now",
    },
    "currentUser": Immutable.Map {},
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {},
    "ticketId": "0",
  },
  "cacheAdded": true,
  "contentState": "<div>Foo bar baz</div>",
  "emailExtraAdded": false,
  "forceFocus": true,
  "forceUpdate": true,
  "inserted_discounts": Immutable.List [],
  "selectionState": {
    "anchorBlockText": "Foo bar baz",
    "anchorOffset": "1",
    "focusBlockText": "Foo bar baz",
    "focusOffset": "2",
    "hasFocus": false,
    "isBackward": false,
  },
  "state": Immutable.Map {
    "state": Immutable.Map {
      "selectionState": null,
      "inserted_discounts": Immutable.List [],
      "emailExtraAdded": false,
      "forceFocus": false,
      "appliedMacro": null,
      "isTranslationPending": false,
      "dirty": false,
      "forceUpdate": false,
      "firstNewMessage": true,
      "contentState": "<div><br></div>",
      "cacheAdded": true,
    },
    "_internal": Immutable.Map {
      "loading": Immutable.Map {
        "addAttachment": false,
        "submitMessage": false,
      },
    },
    "newMessage": Immutable.Map {
      "channel": "email",
      "mention_ids": Immutable.List [],
      "macros": Immutable.List [],
      "body_html": "",
      "public": true,
      "body_text": "",
      "subject": "",
      "via": "helpdesk",
      "from_agent": true,
      "attachments": Immutable.List [],
      "sender": null,
      "source": Immutable.Map {
        "type": "email",
        "from": Immutable.Map {},
        "to": Immutable.List [],
        "cc": Immutable.List [],
        "bcc": Immutable.List [],
        "extra": Immutable.Map {
          "include_thread": false,
        },
      },
    },
  },
}
`;

exports[`responseUtils addCache should restore message state from cache when cache is not added 1`] = `
{
  "action": {
    "args": Immutable.Map {
      "body_html": "<div><strong>Hello, check this out</strong></div><div><br></div><figure style="display:inline-block;margin:0"><img src="https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/image-e99e1a8a-990b-4df1-876d-cd1ced6df667.png" width="400px" style="max-width: 100%"></figure><br><div><em>should be good now</em></div>",
      "body_text": "Hello, check this out

 

should be good now",
    },
    "currentUser": Immutable.Map {},
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {},
    "ticketId": "0",
  },
  "cacheAdded": true,
  "contentState": "<div>Foo bar baz</div>",
  "emailExtraAdded": false,
  "forceFocus": true,
  "forceUpdate": true,
  "inserted_discounts": Immutable.List [],
  "selectionState": {
    "anchorBlockText": "Foo bar baz",
    "anchorOffset": "1",
    "focusBlockText": "Foo bar baz",
    "focusOffset": "2",
    "hasFocus": false,
    "isBackward": false,
  },
  "state": Immutable.Map {
    "state": Immutable.Map {
      "selectionState": null,
      "inserted_discounts": Immutable.List [],
      "emailExtraAdded": false,
      "forceFocus": false,
      "appliedMacro": null,
      "isTranslationPending": false,
      "dirty": false,
      "forceUpdate": false,
      "firstNewMessage": true,
      "contentState": "<div><br></div>",
      "cacheAdded": true,
    },
    "_internal": Immutable.Map {
      "loading": Immutable.Map {
        "addAttachment": false,
        "submitMessage": false,
      },
    },
    "newMessage": Immutable.Map {
      "channel": "email",
      "mention_ids": Immutable.List [],
      "macros": Immutable.List [],
      "body_html": "",
      "public": true,
      "body_text": "",
      "subject": "",
      "via": "helpdesk",
      "from_agent": true,
      "attachments": Immutable.List [],
      "sender": null,
      "source": Immutable.Map {
        "type": "email",
        "from": Immutable.Map {},
        "to": Immutable.List [],
        "cc": Immutable.List [],
        "bcc": Immutable.List [],
        "extra": Immutable.Map {
          "include_thread": false,
        },
      },
    },
  },
}
`;

exports[`responseUtils addCache should set cacheAdded in context to true and not restore the message from storage when cache is added 1`] = `
{
  "action": {
    "args": Immutable.Map {
      "body_html": "<div><strong>Hello, check this out</strong></div><div><br></div><figure style="display:inline-block;margin:0"><img src="https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/image-e99e1a8a-990b-4df1-876d-cd1ced6df667.png" width="400px" style="max-width: 100%"></figure><br><div><em>should be good now</em></div>",
      "body_text": "Hello, check this out

 

should be good now",
    },
    "currentUser": Immutable.Map {},
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {},
    "ticketId": "0",
  },
  "cacheAdded": true,
  "contentState": "<div><br></div>",
  "forceFocus": false,
  "forceUpdate": false,
  "state": Immutable.Map {
    "state": Immutable.Map {
      "selectionState": null,
      "inserted_discounts": Immutable.List [],
      "emailExtraAdded": false,
      "forceFocus": false,
      "appliedMacro": null,
      "isTranslationPending": false,
      "dirty": false,
      "forceUpdate": false,
      "firstNewMessage": true,
      "contentState": "<div><br></div>",
      "cacheAdded": true,
    },
    "_internal": Immutable.Map {
      "loading": Immutable.Map {
        "addAttachment": false,
        "submitMessage": false,
      },
    },
    "newMessage": Immutable.Map {
      "channel": "email",
      "mention_ids": Immutable.List [],
      "macros": Immutable.List [],
      "body_html": "",
      "public": true,
      "body_text": "",
      "subject": "",
      "via": "helpdesk",
      "from_agent": true,
      "attachments": Immutable.List [],
      "sender": null,
      "source": Immutable.Map {
        "type": "email",
        "from": Immutable.Map {},
        "to": Immutable.List [],
        "cc": Immutable.List [],
        "bcc": Immutable.List [],
        "extra": Immutable.Map {
          "include_thread": false,
        },
      },
    },
  },
}
`;

exports[`responseUtils applyMacro should display all HTML for email 1`] = `"<div><strong>Hello, check this out</strong></div><div><br></div><figure style="display:inline-block;margin:0"><img src="https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/image-e99e1a8a-990b-4df1-876d-cd1ced6df667.png" width="400" style="max-width: 100%"></figure><div><br></div><div><em>should be good now</em></div>"`;

exports[`responseUtils applyMacro should sanitize HTML for facebook messenger 1`] = `"<div>Hello, check this out</div><div><br></div><figure style="display:inline-block;margin:0"><img src="https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/image-e99e1a8a-990b-4df1-876d-cd1ced6df667.png" width="400" style="max-width: 100%"></figure><div><br></div><div>should be good now</div>"`;

exports[`responseUtils toReplyAreaStateJS should convert immutable state to object 1`] = `
{
  "appliedMacro": null,
  "cacheAdded": true,
  "contentState": [
    {
      "data": {},
      "depth": 0,
      "text": "",
      "type": "unstyled",
    },
  ],
  "dirty": false,
  "emailExtraAdded": false,
  "firstNewMessage": true,
  "forceFocus": true,
  "forceUpdate": true,
}
`;

exports[`responseUtils transformMessageContext should mutate formatted passed context param 1`] = `
{
  "action": {
    "args": Immutable.Map {
      "body_html": "<div><strong>Hello, check this out</strong></div><div><br></div><figure style="display:inline-block;margin:0"><img src="https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/image-e99e1a8a-990b-4df1-876d-cd1ced6df667.png" width="400px" style="max-width: 100%"></figure><br><div><em>should be good now</em></div>",
      "body_text": "Hello, check this out

 

should be good now",
    },
    "currentUser": Immutable.Map {},
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {},
    "ticketId": "foo-ticket",
  },
  "contentState": "<div>Foo bar baz</div>",
  "emailExtraAdded": false,
  "forceFocus": true,
  "forceUpdate": true,
  "inserted_discounts": Immutable.List [],
  "selectionState": {
    "anchorBlockText": "Foo bar baz",
    "anchorOffset": "1",
    "focusBlockText": "Foo bar baz",
    "focusOffset": "2",
    "hasFocus": false,
    "isBackward": false,
  },
  "sourceType": "email",
  "state": Immutable.Map {
    "state": Immutable.Map {
      "selectionState": null,
      "inserted_discounts": Immutable.List [],
      "emailExtraAdded": false,
      "forceFocus": false,
      "appliedMacro": null,
      "isTranslationPending": false,
      "dirty": false,
      "forceUpdate": false,
      "firstNewMessage": true,
      "contentState": "<div><br></div>",
      "cacheAdded": false,
    },
    "_internal": Immutable.Map {
      "loading": Immutable.Map {
        "addAttachment": false,
        "submitMessage": false,
      },
    },
    "newMessage": Immutable.Map {
      "channel": "email",
      "mention_ids": Immutable.List [],
      "macros": Immutable.List [],
      "body_html": "",
      "public": true,
      "body_text": "",
      "subject": "",
      "via": "helpdesk",
      "from_agent": true,
      "attachments": Immutable.List [],
      "sender": null,
      "source": Immutable.Map {
        "type": "email",
        "from": Immutable.Map {},
        "to": Immutable.List [],
        "cc": Immutable.List [],
        "bcc": Immutable.List [],
        "extra": Immutable.Map {
          "include_thread": false,
        },
      },
    },
  },
}
`;

exports[`responseUtils transformMessageContext should return formatted context from cached content 1`] = `
{
  "contentState": Immutable.Record {
    "entityMap": {},
    "blockMap": Immutable.OrderedMap {
      "mock-key": Immutable.Record {
        "key": "mock-key",
        "type": "unstyled",
        "text": "Foo bar baz",
        "characterList": Immutable.List [
          Immutable.Record {
            "style": Immutable.OrderedSet [],
            "entity": null,
          },
          Immutable.Record {
            "style": Immutable.OrderedSet [],
            "entity": null,
          },
          Immutable.Record {
            "style": Immutable.OrderedSet [],
            "entity": null,
          },
          Immutable.Record {
            "style": Immutable.OrderedSet [],
            "entity": null,
          },
          Immutable.Record {
            "style": Immutable.OrderedSet [],
            "entity": null,
          },
          Immutable.Record {
            "style": Immutable.OrderedSet [],
            "entity": null,
          },
          Immutable.Record {
            "style": Immutable.OrderedSet [],
            "entity": null,
          },
          Immutable.Record {
            "style": Immutable.OrderedSet [],
            "entity": null,
          },
          Immutable.Record {
            "style": Immutable.OrderedSet [],
            "entity": null,
          },
          Immutable.Record {
            "style": Immutable.OrderedSet [],
            "entity": null,
          },
          Immutable.Record {
            "style": Immutable.OrderedSet [],
            "entity": null,
          },
        ],
        "depth": 0,
        "data": Immutable.Map {},
      },
    },
    "selectionBefore": Immutable.Record {
      "anchorKey": "mock-key",
      "anchorOffset": 0,
      "focusKey": "mock-key",
      "focusOffset": 0,
      "isBackward": false,
      "hasFocus": false,
    },
    "selectionAfter": Immutable.Record {
      "anchorKey": "mock-key",
      "anchorOffset": 0,
      "focusKey": "mock-key",
      "focusOffset": 0,
      "isBackward": false,
      "hasFocus": false,
    },
  },
  "emailExtraAdded": false,
  "forceFocus": true,
  "forceUpdate": true,
  "inserted_discounts": Immutable.List [],
  "selectionState": Immutable.Record {
    "anchorKey": "mock-key",
    "anchorOffset": "1",
    "focusKey": "mock-key",
    "focusOffset": "2",
    "isBackward": false,
    "hasFocus": false,
  },
}
`;
